# plox

./: README.md  pyproject.toml
plox/: ast.py  environment.py  errors.py  interpret.py  main.py  parser.py  pprinter.py  resolver.py  scanner.py  tokens.py
samples/: class2.lox  class3.lox  class4.lox  expr1.lox  fib_rec.lox  local_redefinition.lox  logical1.lox  statements3.lox  subclass2.lox  test.lox
